Add release tag

--- a/.github/workflows/installer.yaml
+++ b/.github/workflows/installer.yaml
@@ -1,8 +1,10 @@
-name: Build and Package
+name: Build and Release
 
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*'  # Trigger on version tags
   pull_request:
     branches: [ main ]
 
@@ -35,3 +37,15 @@ jobs:
       with:
         name: installer
         path: installer\Output\idis-converter-setup.exe
+
+    # Create Release
+    - name: Create Release
+      if: startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: installer\Output\idis-converter-setup.exe
+        draft: false
+        prerelease: false
+        generate_release_notes: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
