Add release tag

--- a/.github/workflows/installer.yaml
+++ b/.github/workflows/installer.yaml
@@ -43,7 +43,8 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/v')
       uses: softprops/action-gh-release@v1
       with:
-        files: installer\Output\idis-converter-setup.exe
+        files: installer/Output/idis-converter-setup.exe
+        fail_on_unmatched_files: true
         draft: false
         prerelease: false
         generate_release_notes: true
